--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
+[project.optional-dependencies]
+dev = [
+  "pytest>=8.0",
+  "pytest-cov>=5.0",
+  "black>=24.0",
+  "ruff>=0.6"
+]
 dependencies = [
   "requests>=2.32",
   "pandas>=2.2"
